Werkzeug Changelog
==================


Version 0.2
-----------
(codename to be selected, release date to be announced)

- Added `AnyConverter` to the routing system.
- Added `werkzeug.contrib.securecookie`
- Exceptions have a ``get_response()`` method that return a resposne object
- fixed the path ordering bug (#293), thanks Thomas Johansson
- BaseReporterStream is now part of the werkzeug contrib module.  With
  Werkzeug 0.3 onwards you will have to import it from there.
- added DispatcherMiddleware.


Version 0.1
-----------
(codename Wictorinoxger, released Dec 9th 2007)

- Initial release